# columbo

./: .gitignore  CMakeLists.txt  README.md  all_steps.cpp  all_steps.h  cage.cpp  cage_unit_overlap.cpp  cage_unit_overlap.h  columbo.cpp  combinations.cpp  combinations.h  debug.h  defs.cpp  defs.h  fixed_cell_cleanup.cpp  fixed_cell_cleanup.h  hiddens.cpp  hiddens.h  init.h  innies_outies.cpp  innies_outies.h  intersections.cpp  intersections.h  killer_combos.cpp  killer_combos.h  lexer.h  naked_pairs.h  nakeds.cpp  nakeds.h  singles.h  solver.cpp  step.h  strategy.cpp  strategy.h  test.sh  utils.cpp  utils.h  xwings.h
printers/: ncurses_printer.cpp  ncurses_printer.h  terminal_printer.cpp  terminal_printer.h
src/: CMakeLists.txt  all_steps.h  cage.cpp  cage_unit_overlap.cpp  cli.h  combinations.cpp  combinations.h  debug.h  defs.cpp  defs.h  fixed_cell_cleanup.h  hiddens.cpp  hiddens.h  init.h  innies_outies.cpp  innies_outies.h  intersections.cpp  intersections.h  killer_combos.cpp  killer_combos.h  printable.h  strategy.cpp  utils.cpp  utils.h
src/printers/: ncurses_printer.cpp  terminal_printer.cpp
src/tools/: columbo-cli.cpp
sudokus/: 4thewww1.txt  4thewww2.txt  book_1.txt  book_2.txt  book_3.txt  daily_1.txt  deadly_1.txt  diabolical_1.txt  easy_1.txt  easy_2.txt  extreme_1.txt  extreme_2.txt  fiendish_1.txt  innies_outies1.txt  krazydad_supertough_1.txt  krazydad_supertough_2.txt  krazydad_supertough_3.txt  krazydad_supertough_4.txt  moderate_1.txt  puzzler1.txt  tough_1.txt
test/: CMakeLists.txt  columbo_check.py  run_tests.py
test/test_sudokus/: 4thewww1.txt  4thewww2.txt  book_1.txt  book_2.txt  book_3.txt  conflicting_combos.txt  daily_1.txt  deadly_1.txt  diabolical_1.txt  easy_1.txt  easy_2.txt  extreme_1.txt  extreme_2.txt  fiendish_1.txt  innies_outies1.txt  krazydad_insane_1.txt  krazydad_insane_2.txt  krazydad_insane_3.txt  krazydad_insane_4.txt  krazydad_insane_5.txt  krazydad_insane_6.txt  krazydad_insane_7.txt  krazydad_insane_8.txt  krazydad_insane_v2b2_1.txt  krazydad_supertough_1.txt  krazydad_supertough_2.txt  krazydad_supertough_3.txt  krazydad_supertough_4.txt  krazydad_supertough_5.txt  krazydad_supertough_6.txt  krazydad_supertough_7.txt  krazydad_supertough_8.txt  krazydad_supertough_v2_1.txt  krazydad_supertough_v2_2.txt  krazydad_supertough_v2_3.txt  krazydad_supertough_v2_4.txt  krazydad_supertough_v2_5.txt  krazydad_supertough_v2_6.txt  krazydad_supertough_v2_7.txt  krazydad_supertough_v2_8.txt  (+52 more)
test/test_sudokus/expected_outputs/: conflicting_combos1.txt  innies_outies1.txt  innies_outies1x2.txt  krazydad_supertough_4_innieoutiehard.txt  naked_quads.txt  tough_1.txt
test/unit/: CMakeLists.txt  cages.cpp  combos.cpp  framework.h  main.cpp
tools/: CMakeLists.txt  columbo-cli.cpp
